fix image distortion on checkout

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -3,6 +3,10 @@
   height:200px
 }
 
+.fixed-image-height-summary{
+  object-fit: contain;
+}
+
 .header,.footer{
   background-color: rgb(33,31,31);
   color: whitesmoke;
